<resources>
    <string name="app_name">Noc Tune</string>
</resources>
